src/snapshots/monkey_language_server__parser__test__array_happy_4.snap
---
source: src/parser.rs
description: "[1,2,3, [4]]; 5"
expression: stmts
---
[
    Array {
        token: Token(LBracket, "[", (0,0)->(0,1)),
        elems: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "1", (0,1)->(0,2)),
                        value: 1,
                    },
                ),
                Ok(
                    Int {
                        token: Token(Int, "2", (0,3)->(0,4)),
                        value: 2,
                    },
                ),
                Ok(
                    Int {
                        token: Token(Int, "3", (0,5)->(0,6)),
                        value: 3,
                    },
                ),
                Ok(
                    Array {
                        token: Token(LBracket, "[", (0,8)->(0,9)),
                        elems: Ok(
                            [
                                Ok(
                                    Int {
                                        token: Token(Int, "4", (0,9)->(0,10)),
                                        value: 4,
                                    },
                                ),
                            ],
                        ),
                    },
                ),
            ],
        ),
    },
    Int {
        token: Token(Int, "5", (0,14)->(0,15)),
        value: 5,
    },
]
