src/snapshots/monkey_language_server__parser__test__bool_expr.snap
---
source: src/parser.rs
description: "true"
expression: stmts
---
[
    Bool {
        token: Token(True, "true", (0,0)->(0,4)),
        value: true,
    },
]
