src/snapshots/monkey_language_server__parser__test__fn_call_happy_4.snap
---
source: src/parser.rs
description: "fn(x, y){ return x + y; }(1, 2);"
expression: stmts
---
[
    Call {
        token: Token(LParen, "(", (0,25)->(0,26)),
        func: Function {
            token: Token(Function, "fn", (0,0)->(0,2)),
            params: Ok(
                [
                    Ok(
                        Identifier {
                            token: Token(Identifier, "x", (0,3)->(0,4)),
                            name: "x",
                        },
                    ),
                    Ok(
                        Identifier {
                            token: Token(Identifier, "y", (0,6)->(0,7)),
                            name: "y",
                        },
                    ),
                ],
            ),
            body: Ok(
                Block {
                    token: Token(LBrace, "{", (0,8)->(0,9)),
                    statements: [
                        Return {
                            token: Token(Return, "return", (0,10)->(0,16)),
                            value: Some(
                                Ok(
                                    Infix {
                                        token: Token(Plus, "+", (0,19)->(0,20)),
                                        left: Identifier {
                                            token: Token(Identifier, "x", (0,17)->(0,18)),
                                            name: "x",
                                        },
                                        right: Identifier {
                                            token: Token(Identifier, "y", (0,21)->(0,22)),
                                            name: "y",
                                        },
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
        },
        args: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "1", (0,26)->(0,27)),
                        value: 1,
                    },
                ),
                Ok(
                    Int {
                        token: Token(Int, "2", (0,29)->(0,30)),
                        value: 2,
                    },
                ),
            ],
        ),
    },
]
