src/snapshots/monkey_language_server__parser__test__fn_call_happy_6.snap
---
source: src/parser.rs
description: "add(6, 7 * 8); 2"
expression: stmts
---
[
    Call {
        token: Token(LParen, "(", (0,3)->(0,4)),
        func: Identifier {
            token: Token(Identifier, "add", (0,0)->(0,3)),
            name: "add",
        },
        args: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "6", (0,4)->(0,5)),
                        value: 6,
                    },
                ),
                Ok(
                    Infix {
                        token: Token(Asterisk, "*", (0,9)->(0,10)),
                        left: Int {
                            token: Token(Int, "7", (0,7)->(0,8)),
                            value: 7,
                        },
                        right: Int {
                            token: Token(Int, "8", (0,11)->(0,12)),
                            value: 8,
                        },
                    },
                ),
            ],
        ),
    },
    Int {
        token: Token(Int, "2", (0,15)->(0,16)),
        value: 2,
    },
]
